# r1cs-std

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: bench.rs
cp-benches/: Cargo.toml
crypto-primitives/: Cargo.toml
crypto-primitives/src/commitment/: constraints.rs
crypto-primitives/src/commitment/blake2s/: constraints.rs
crypto-primitives/src/commitment/injective_map/: constraints.rs
crypto-primitives/src/commitment/pedersen/: constraints.rs  mod.rs
crypto-primitives/src/crh/: constraints.rs
crypto-primitives/src/crh/bowe_hopwood/: constraints.rs  mod.rs
crypto-primitives/src/crh/injective_map/: constraints.rs
crypto-primitives/src/crh/pedersen/: constraints.rs  mod.rs
crypto-primitives/src/merkle_tree/: constraints.rs
crypto-primitives/src/nizk/: constraints.rs  mod.rs
crypto-primitives/src/nizk/gm17/: constraints.rs  mod.rs
crypto-primitives/src/nizk/groth16/: constraints.rs  mod.rs
crypto-primitives/src/prf/: constraints.rs
crypto-primitives/src/prf/blake2s/: constraints.rs
crypto-primitives/src/signature/: constraints.rs
crypto-primitives/src/signature/schnorr/: constraints.rs  mod.rs
r1cs-std/: Cargo.toml
r1cs-std/src/: alloc.rs  eq.rs  lib.rs  select.rs
r1cs-std/src/bits/: boolean.rs  mod.rs  uint.rs  uint8.rs
r1cs-std/src/fields/: cubic_extension.rs  fp12.rs  fp3.rs  fp6_3over2.rs  mod.rs  quadratic_extension.rs
r1cs-std/src/fields/fp/: cmp.rs  mod.rs
r1cs-std/src/groups/: mod.rs
r1cs-std/src/groups/curves/short_weierstrass/: mod.rs
r1cs-std/src/groups/curves/short_weierstrass/bls12/: mod.rs
r1cs-std/src/groups/curves/short_weierstrass/mnt4/: mod.rs
r1cs-std/src/groups/curves/short_weierstrass/mnt6/: mod.rs
r1cs-std/src/groups/curves/twisted_edwards/: mod.rs
r1cs-std/src/instantiated/bls12_377/: mod.rs
r1cs-std/src/instantiated/ed_on_bls12_377/: mod.rs
r1cs-std/src/instantiated/ed_on_bls12_381/: mod.rs
r1cs-std/src/instantiated/ed_on_bn254/: mod.rs
r1cs-std/src/instantiated/ed_on_bw6_761/: mod.rs
r1cs-std/src/instantiated/ed_on_cp6_782/: mod.rs
r1cs-std/src/instantiated/ed_on_mnt4_298/: mod.rs
r1cs-std/src/instantiated/ed_on_mnt4_753/: mod.rs
r1cs-std/src/instantiated/mnt4_298/: mod.rs
r1cs-std/src/instantiated/mnt4_753/: mod.rs
r1cs-std/src/instantiated/mnt6_298/: mod.rs
r1cs-std/src/instantiated/mnt6_753/: mod.rs
r1cs-std/src/pairing/: mod.rs
r1cs-std/src/pairing/bls12/: mod.rs
r1cs-std/src/pairing/mnt4/: mod.rs
r1cs-std/src/pairing/mnt6/: mod.rs
scripts/: migrate.sh
src/: alloc.rs  allocated_nonnative_field_mul_result_var.rs  allocated_nonnative_field_var.rs  bit_bounded.rs  cmp.rs  convert.rs  eq.rs  gr1cs_var.rs  lib.rs  macros.rs  nonnative_field_mul_result_var.rs  nonnative_field_var.rs  params.rs  r1cs_var.rs  reduce.rs  select.rs  test_utils.rs  uint8.rs
src/bits/: boolean.rs  mod.rs  uint.rs  uint8.rs
src/bits/boolean/: allocated.rs  and.rs  eq.rs  mod.rs  not.rs  or.rs  select.rs  test_utils.rs  xor.rs
src/bits/uint/: add.rs  and.rs  cmp.rs  convert.rs  eq.rs  mod.rs  not.rs  or.rs  rotate.rs  select.rs  test_utils.rs  xor.rs
src/boolean/: allocated.rs  and.rs  cmp.rs  convert.rs  eq.rs  mod.rs  not.rs  or.rs  select.rs  test_utils.rs  xor.rs
src/fields/: cubic_extension.rs  fp12.rs  fp2.rs  fp3.rs  fp4.rs  fp6_2over3.rs  fp6_3over2.rs  mod.rs  quadratic_extension.rs
src/fields/emulated_fp/: allocated_field_var.rs  allocated_mul_result.rs  field_var.rs  mod.rs  mul_result.rs  params.rs  reduce.rs
src/fields/fp/: cmp.rs  mod.rs
src/fields/nonnative/: CHANGELOG.md  Cargo.toml  README.md  allocated_field_var.rs  allocated_mul_result.rs  allocated_nonnative_field_mul_result_var.rs  allocated_nonnative_field_var.rs  field_var.rs  mod.rs  mul_result.rs  nonnative_field_mul_result_var.rs  nonnative_field_var.rs  params.rs  reduce.rs
src/fields/nonnative/.github/: PULL_REQUEST_TEMPLATE.md
src/fields/nonnative/.github/workflows/: ci.yml
src/fields/nonnative/benches/: bench.rs
src/fields/nonnative/src/: allocated_nonnative_field_mul_result_var.rs  allocated_nonnative_field_var.rs  nonnative_field_mul_result_var.rs  params.rs  reduce.rs
src/fields/nonnative/tests/: arithmetic_tests.rs  from_test.rs  tests.rs  to_bytes_test.rs  to_constraint_field_test.rs
src/groups/: mod.rs
src/groups/curves/: mod.rs
src/groups/curves/short_weierstrass/: mod.rs  non_zero_affine.rs
src/groups/curves/short_weierstrass/bls12/: mod.rs
src/groups/curves/short_weierstrass/mnt4/: mod.rs
src/groups/curves/short_weierstrass/mnt6/: mod.rs
src/groups/curves/twisted_edwards/: mod.rs
src/pairing/: mod.rs
src/pairing/bls12/: mod.rs
src/pairing/mnt4/: mod.rs
src/pairing/mnt6/: mod.rs
src/poly/: mod.rs
src/poly/domain/: mod.rs  vanishing_poly.rs
src/poly/evaluations/: mod.rs
src/poly/evaluations/univariate/: lagrange_interpolator.rs  mod.rs
src/poly/polynomial/: mod.rs
src/poly/polynomial/univariate/: dense.rs  mod.rs
src/uint/: and.rs  cmp.rs  convert.rs  eq.rs  mod.rs  not.rs  or.rs  prim_uint.rs  rotate.rs  select.rs  shl.rs  shr.rs  test_utils.rs  xor.rs
src/uint/add/: mod.rs  saturating.rs  wrapping.rs
tests/: arithmetic_tests.rs  from_test.rs  to_bytes_test.rs  to_constraint_field_test.rs
